# Crawling-batch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
sql/: V1__init_schema.sql  V2__add_deal_detail_columns.sql  V3__add_status_column.sql
src/crawling_batch/: main.py
src/crawling_batch/config/: __init__.py  database.py  keywords.py  settings.py
src/crawling_batch/crawler/: __init__.py  arca.py  base.py  ppomppu.py  ruliweb.py  wineandmore.py
src/crawling_batch/model/: __init__.py  hotdeal.py
tests/: test_crawler.py  test_model.py
